rendered-manifests/apps/home-assistant/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ha
  name: ha
---
apiVersion: v1
kind: Service
metadata:
  name: ha-service
  namespace: ha
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8123
  selector:
    app: ha
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ha
  name: ha-deployment
  namespace: ha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ha
  template:
    metadata:
      labels:
        app: ha
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Denver
        image: ghcr.io/home-assistant/home-assistant:2024.12.5
        name: ha
        ports:
        - containerPort: 8123
        resources:
          limits:
            memory: 800Mi
          requests:
            memory: 380Mi
        securityContext:
          runAsGroup: 1006
          runAsUser: 1006
        volumeMounts:
        - mountPath: /config
          name: ha-pvc
      volumes:
      - name: ha-pvc
        persistentVolumeClaim:
          claimName: ha-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod-cert-issuer
  name: ha
  namespace: ha
spec:
  ingressClassName: nginx
  rules:
  - host: ha.blunders.me
    http:
      paths:
      - backend:
          service:
            name: ha-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ha.blunders.me
    secretName: ha-secret-tls
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ha
  name: ha
---
apiVersion: v1
kind: Service
metadata:
  name: ha-service
  namespace: ha
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8123
  selector:
    app: ha
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ha
  name: ha-deployment
  namespace: ha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ha
  template:
    metadata:
      labels:
        app: ha
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Denver
        image: ghcr.io/home-assistant/home-assistant:2024.12.5
        name: ha
        ports:
        - containerPort: 8123
        resources:
          limits:
            memory: 800Mi
          requests:
            memory: 380Mi
        securityContext:
          runAsGroup: 1006
          runAsUser: 1006
        volumeMounts:
        - mountPath: /config
          name: ha-pvc
      volumes:
      - name: ha-pvc
        persistentVolumeClaim:
          claimName: ha-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod-cert-issuer
  name: ha
  namespace: ha
spec:
  ingressClassName: nginx
  rules:
  - host: ha.blunders.me
    http:
      paths:
      - backend:
          service:
            name: ha-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ha.blunders.me
    secretName: ha-secret-tls
